docs/v0.4.1-alpha/vdp/ai-connectors/openai.en.mdx
---
title: "OpenAI"
lang: "en-US"
draft: false
description: "Learn about how to set up a OpenAI AI connector for the unstructured data pipeline tool VDP https://github.com/instill-ai/vdp"
---

The OpenAI AI connector enables you to connect the AI models served on the OpenAI Platform for the following tasks:

- [Text Generation](#text-generation)
- [Text Embeddings](#text-embeddings)
- [Speech Recognition](#speech-recognition)

## Release Stage

`Alpha`

## Resource Configuration

The up-to-date configuration is maintained [here](https://github.com/instill-ai/connector-ai/blob/main/pkg/openai/config/definitions.json).

| Field     | Type   | Note                                                                            |
| :-------- | :----- | :------------------------------------------------------------------------------ |
| api_key\* | string | Enter your OpenAI API key. To find your keys, go to your OpenAI's Account page. |

### No-code Setup

<InfoBlock type="info" title="Prerequisites">

To create a OpenAI AI connector, you'll first need to create a
OpenAI account by visiting [openai.com](https://openai.com).
Access to your API keys can then be managed through OpenAI's Account
page.

</InfoBlock>

To create a OpenAI AI connector:

1. Go to the **AI** page and click **Set up new AI**
2. In the **Set Up New AI Connector** page, fill an ID for your model, this will be the unique identifier of this connector
3. [Optional] Give a short description of your connector in the **Description** field
4. Click the **AI Connector Type** ▾ drop-down and choose **OpenAI**
5. Fill the following information and click **Set up**

   - Fill **API Key**. Follow the OpenAI [documentation](https://platform.openai.com/docs/api-reference/authentication) to find your API key

6. By default, the connector is disconnected. To connect and use AI connector, go to the connector page and click **Connect**.

### Low-code Setup

<CH.Code>

```shellscript cURL(Instill-Cloud)
curl -X POST https://api.instill.tech/vdp/v1alpha/users/<user-id>/connector-resources \
--header 'Authorization: Bearer <Instill-Cloud-API-Token>' \
--data '{
  "id": "my-openai",
  "connector_definition_name": "connector-definitions/ai-openai",
  "configuration": {
    "api_key": "<open-ai-api-key>"
  }
}'
```

```shellscript cURL(Instill-Core)
curl -X POST http://localhost:8080/vdp/v1alpha/users/<user-id>/connector-resources \
--data '{
  "id": "my-openai",
  "connector_definition_name": "connector-definitions/ai-openai",
  "configuration": {
    "api_key": "<open-ai-api-key>"
  }
}'
```

</ CH.Code>

For other operations, please refer to the [VDP Protobufs](https://buf.build/instill-ai/protobufs).

## Connector Configuration

When using the OpenAI AI connector in your pipeline, certain fields of the input data need to be filled to trigger the pipeline effectively.
Here are the expected input and output data fields for the OpenAI AI connector.

### Text Generation

If `task` is set to **TASK_TEXT_GENERATION**

| Input          | Type   | Description                                                                                                                                                                                                                                                                                                                                                |
| :------------- | ------ | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| task           | string | `TASK_TEXT_GENERATION`                                                                                                                                                                                                                                                                                                                                     |
| prompt         | string | Text prompt                                                                                                                                                                                                                                                                                                                                                |
| model          | string | The model that you want to use. eg., `gpt-4` and `gpt-3.5-turbo `.                                                                                                                                                                                                                                                                                         |
| system_message | string | The system message helps set the behavior of the assistant. For example, you can modify the personality of the assistant or provide specific instructions about how it should behave throughout the conversation. By default, the model's behavior is using a generic message as "You are a helpful assistant."                                            |
| temperature    | float  | The sampling temperature, between 0 and 1. Higher values like 0.8 will make the output more random, while lower values like 0.2 will make it more focused and deterministic. If set to 0, the model will use [log probability](https://en.wikipedia.org/wiki/Log_probability) to automatically increase the temperature until certain thresholds are hit.  |
| n              | int    | How many chat completion choices to generate for each input message.                                                                                                                                                                                                                                                                                       |
| max_tokens     | int    | The maximum number of [tokens](https://platform.openai.com/tokenizer) to generate in the chat completion. The total length of input tokens and generated tokens is limited by the model's context length. [Example Python code](https://github.com/openai/openai-cookbook/blob/main/examples/How_to_count_tokens_with_tiktoken.ipynb) for counting tokens. |

| Output | Type          | Description          |
| :----- | ------------- | -------------------- |
| texts  | array[string] | Generated text array |

### Text Embeddings

| Input | Type   | Description                                                  |
| :---- | ------ | ------------------------------------------------------------ |
| task  | string | `TASK_TEXT_EMBEDDINGS`                                       |
| text  | string | Text to be converted to dense vector                         |
| model | string | The model that you want to use. eg. `text-embedding-ada-002` |

| Output    | Type         | Description         |
| :-------- | ------------ | ------------------- |
| embedding | array[float] | A vector embeddings |

### Speech Recognition

| Input       | Type   | Description                                                                                                                                                                                                                                                                                                                                               |
| :---------- | ------ | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| task        | string | `TASK_SPEECH_RECOGNITION`                                                                                                                                                                                                                                                                                                                                 |
| model       | string | The model that you want to use, e.g., `whisper-1`.                                                                                                                                                                                                                                                                                                        |
| audio       | string | Base64 encoded audio recording to transcribe                                                                                                                                                                                                                                                                                                              |
| temperature | float  | The sampling temperature, between 0 and 1. Higher values like 0.8 will make the output more random, while lower values like 0.2 will make it more focused and deterministic. If set to 0, the model will use [log probability](https://en.wikipedia.org/wiki/Log_probability) to automatically increase the temperature until certain thresholds are hit. |
| language    | string | The language of the input audio. Supplying the input language in [ISO-639-1](https://en.wikipedia.org/wiki/List_of_ISO_639-1_codes) format will improve accuracy and latency.                                                                                                                                                                             |
| prompt      | string | An optional text to guide the model's style or continue a previous audio segment. The [prompt](https://platform.openai.com/docs/guides/speech-to-text/prompting) should match the audio language.                                                                                                                                                         |

| Output | Type   | Description      |
| :----- | ------ | ---------------- |
| text   | string | Transcribed text |

## Example

Example input and output data for each task:

<CH.Code>

```json TASK_TEXT_GENERATION
// Input
{
  "task": "TASK_TEXT_GENERATION",
  "model": "gpt-3.5-turbo",
  "prompt": "Write me a story about London"
}
// Output
{
  "texts": [
    "Once upon a time, in the heart of England, there stood a vibrant city named London. It was a place of rich history, diverse culture, and endless possibilities. From its iconic landmarks to its bustling streets, the city had a unique charm that drew people from all walks of life..."
  ]
}
```

```json TASK_TEXT_EMBEDDINGS
// Input
{
  "task": "TASK_TEXT_EMBEDDINGS",
  "model": "text-embedding-ada-002",
  "text": ["I love programming"]
}
// Output A 1536-length vector example
{
  "embedding": [
    0.0023064255,
    -0.009327292,
    ...
    -0.0028842222,
  ],
  "index": 0
}
```

```json TASK_SPEECH_RECOGNITION
// Input
{
  "task": "TASK_SPEECH_RECOGNITION",
  "model": "whisper-1",
  "audio": "<base64 value>"
}
// Output
{
  "text": "Can you transcribe what I am saying?"
}
```

</ CH.Code>
